--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
-    background-color: rgb(15, 48, 87);
-    color: rgb(245, 245, 245);
+    background-color: #0f3057;
+    color: #f5f5f5;
     margin: 0
 }
 
@@ -24,7 +24,7 @@ section{
     margin: 8px
 }
 
-.header{
+.container{
     width: 400px;
     margin-left: auto;
     margin-right: auto;
@@ -34,13 +34,13 @@ section{
     align-items: center;
 }
 
-.items{
+main{
     width: 400px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.icon img{
+.container img{
     border-radius: 50%;
 }
 
