--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
 @charset "utf-8";
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
 
 body{
     font-family: sans-serif;
