--- a/css/main_pc.css
+++ b/css/main_pc.css
@@ -1,59 +1,91 @@
 @charset "utf-8";
-.container{
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.headcol {
+    margin-left: 20px;
+}
+
+.container {
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
-body{
+.main>.container {
+    margin: 30px 10%;
+    align-items: flex-start;
+    justify-content: space-between;
+    text-align: center;
+}
+
+body {
     font-family: sans-serif;
     background: #0f3057;
     color: aliceblue;
     margin: 0;
+    font-size: 125%;
 }
 
-header{
+.main {
+    text-align: center;
+}
+
+header {
     background: #00000030;
     padding: 0.5em 0px;
 }
 
-main{
-    font-size: 125%;
-    margin-top: 30px;
-    margin-bottom: 30px;
+nav {
+    order: -1;
 }
 
-footer{
+footer {
     background: #00000030;
     text-align: center;
 }
 
-footer p{
+footer p {
     margin: 0;
     padding: 0.5em;
 }
+
+h3,
+h4 {
+    margin: 30px;
+}
+
+li {
+    line-height: 1.5em;
+}
+
+
 /* リンク色 */
-a{
+
+a {
     color: #80baee;
     text-decoration: none;
 }
 
-a :hover{
-    color:hsl(208, 76%, 80%);
+a:hover {
+    color: hsl(208, 76%, 80%);
     text-decoration: none;
 }
 
-a :active{
+a:active {
     color: hsl(208, 76%, 50%);
     text-decoration: none;
 }
 
-a :visited{
+a:visited {
     color: hsl(208, 60%, 40%);
     text-decoration: none;
 }
 
-main > section + section{
+main>section+section {
     margin-top: 40px;
 }
