--- a/si/css/style.css
+++ b/si/css/style.css
@@ -1,273 +1,311 @@
 @charset "utf-8";
 
 /* 共通設定 */
+
+
 /*画像の伸縮設定*/
+
 img {
-  max-width: 400px;
-  height: auto;
+    max-width: 400px;
+    height: auto;
 }
 
+
 /*ウィンドウ背景色の設定*/
+
 body {
-  background: #0f3057;
-  color: aliceblue;
+    font-family: sans-serif;
+    background: #0f3057;
+    color: aliceblue;
 }
 
 p {
-  line-height: 1.5;
+    line-height: 1.5;
 }
 
+
 /*リンク色の設定*/
+
 a {
-  color: #cce7ff;
-  text-decoration: none;
+    color: #cce7ff;
+    text-decoration: none;
 }
 
 a:visited {
-  color: hsl(208, 100%, 60%);
-  text-decoration: none;
+    color: hsl(208, 100%, 60%);
+    text-decoration: none;
 }
 
 a:hover {
-  color: #66b8ff;
-  text-decoration: none;
+    color: #66b8ff;
+    text-decoration: none;
 }
 
 a:active {
-  color: hsl(216, 100%, 50%);
-  text-decoration: none;
+    color: hsl(216, 100%, 50%);
+    text-decoration: none;
 }
 
+
 /*ヘッダー,ナビ,フッターの共通設定*/
+
 header,
 nav,
 footer {
-  text-align: center;
+    text-align: center;
 }
 
+
 /* header部 */
+
 header {
-  background: #00000030;
-  padding: 0.5em 0px;
-  margin-bottom: 20px;
+    background: #00000030;
+    padding: 0.5em 0px;
+    margin-bottom: 20px;
 }
 
 header p {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
+
 /*ナビ*/
+
 .menu {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .menu li {
-  width: 180px;
-  margin: 0 10px;
+    width: 180px;
+    margin: 0 10px;
 }
 
 .menu a {
-  display: block;
-  padding: 14px 0;
-  background: hsl(189, 44%, 30%);
-  border-radius: 8px;
-  text-decoration: none;
+    display: block;
+    padding: 14px 0;
+    background: hsl(189, 44%, 30%);
+    border-radius: 8px;
+    text-decoration: none;
 }
 
 .menu a:hover {
-  background: hsl(189, 44%, 40%);
+    background: hsl(189, 44%, 40%);
 }
+
 
 /*ページタイトルの設定*/
+
 h1 {
-  width: 600px;
-  margin: 40px auto;
-  border-bottom:1px solid #000;
-  padding: 30px;
-  font-size: 300%;
-  text-align: center;
-  font-weight: bold;
-  line-height: 1;
-  font-family: 'Yusei Magic', sans-serif;
+    width: 600px;
+    margin: 40px auto;
+    border-bottom: 1px solid #000;
+    padding: 30px;
+    font-size: 300%;
+    text-align: center;
+    font-weight: bold;
+    line-height: 1;
+    font-family: 'Yusei Magic', sans-serif;
 }
+
 
 /*コンテンツ枠の設定*/
+
 .contents {
-  max-width: 960px;
-  margin: 40px auto;
-  padding: 60px 80px;
-  border: 1px solid #000;
-  background-color: #00000030;
+    max-width: 960px;
+    margin: 40px auto;
+    padding: 60px 80px;
+    border: 1px solid #000;
+    background-color: #00000030;
 }
+
 
 /*セクション間隔*/
+
 .contents>section+section {
-  margin-top: 80px;
+    margin-top: 80px;
 }
 
-section section:first-of-type{
-  margin-bottom: 10px;
+section section:first-of-type {
+    margin-bottom: 10px;
 }
+
+
 /* 各セクション */
+
+
 /*中見出しの設定*/
+
+
 /* h2 */
+
 .section-head {
-  padding: 10px;
-  margin-bottom: 30px;
-  border: 1px solid #56c3d1 ;
-  border-left: 10px solid #56c3d1;
-  border-right: 10px solid #56c3d1;
-  border-radius: 5px;
-  font-size: 1.4rem;
-  font-weight: bold;
+    padding: 10px;
+    margin-bottom: 30px;
+    border: 1px solid #56c3d1;
+    border-left: 10px solid #56c3d1;
+    border-right: 10px solid #56c3d1;
+    border-radius: 5px;
+    font-size: 1.4rem;
+    font-weight: bold;
 }
 
 .section-even,
 .section-odd {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
 }
 
 .section-even {
-  flex-direction: row-reverse;
+    flex-direction: row-reverse;
 }
 
 .section-profile {
-  display: flex;
+    display: flex;
 }
 
 .section-profile dl {
-  margin-left: 2rem;
+    margin-left: 2rem;
 }
 
 .section-profile dt,
 .section-profile dd {
-  line-height: 1.5;
-}
-.section-profile dd{
-  margin-bottom: 10px;
-}
-.section-even p,
-.section-odd p {
-  width: 286px;
-  margin: 0 20px 20px;
+    line-height: 1.5;
 }
 
+.section-profile dd {
+    margin-bottom: 10px;
+}
+
+.section-even p,
+.section-odd p {
+    width: 286px;
+    margin: 0 20px 20px;
+}
+
+
 /*小見出しの設定*/
+
+
 /* h3 */
+
 .sub-head {
-  font-size: 1.2em;
-  margin: 0 0 0 20px;
+    font-size: 1.2em;
+    margin: 0 0 0 20px;
 }
 
 .sub-head span {
-  font-weight: bold;
+    font-weight: bold;
 }
+
 
 /*猫写真の幅*/
-figcaption{
-  text-align: center;
-  line-height: 2;
-  font-size: 0.8rem;
+
+figcaption {
+    text-align: center;
+    line-height: 2;
+    font-size: 0.8rem;
 }
 
+
 /*「もっと見る」リンクの設定*/
+
 .more {
-  text-align: right;
+    text-align: right;
 }
 
 .more::after {
-  /* content: url(../img/ico_arrow.png); */
-  font-family: "Font Awesome 5 Free";
-  content: "\f138";
-  font-weight: bold;
-  margin-left: 3px;
-  color: #3e9e79;
-  vertical-align: middle;
+    /* content: url(../img/ico_arrow.png); */
+    font-family: "Font Awesome 5 Free";
+    content: "\f138";
+    font-weight: bold;
+    margin-left: 3px;
+    color: #3e9e79;
+    vertical-align: middle;
 }
 
+
 /*リンク種別アイコン*/
+
 a[target="_blank"]::after {
-  /* content: url(../img/ico_blank.png); */
-  font-family: "Font Awesome 5 Free";
-  content: "\f35d";
-  font-weight: bold;
-  margin-left: 5px;
-  vertical-align: middle;
+    /* content: url(../img/ico_blank.png); */
+    font-family: "Font Awesome 5 Free";
+    content: "\f35d";
+    font-weight: bold;
+    margin-left: 5px;
+    vertical-align: middle;
 }
 
 a[href^="mailto:"]::after {
-  /* content: url(../img/ico_mail.png); */
-  font-family: "Font Awesome 5 Free";
-  content: "\f0e0";
-  margin-left: 5px;
-  vertical-align: middle;
+    /* content: url(../img/ico_mail.png); */
+    font-family: "Font Awesome 5 Free";
+    content: "\f0e0";
+    margin-left: 5px;
+    vertical-align: middle;
 }
+
 
 /*円形にクリップ*/
+
 .img-round {
-  border-radius: 50%;
+    border-radius: 50%;
 }
 
-footer p{
-  margin-bottom: 2rem;
+footer p {
+    margin-bottom: 2rem;
 }
+
+
 /*640px以下の場合のレイアウト調整用*/
+
 @media screen and (max-width: 640px) {
-
-  /* コンテンツ */
-  .contents {
-    padding:20px;
-  }
-  /*メニュー*/
-  .menu {
-    display: block;
-    width: 100%;
-    margin: 0 auto 10px;
-  }
-
-  .menu li {
-    width: 60%;
-    margin: 0 auto 10px;
-  }
-
-  .section-even,
-  .section-odd,
-  .section-profile {
-    display: block;
-  }
-
-  #cats img {
-    width: 100%;
-    height: auto;
-  }
-  figcaption{
-    display: none;
-  }
-  .section-even p,
-  .section-odd p {
-    width: 100%;
-  }
-  .section-odd + .more{
-    margin-bottom: 1rem;
-  }
-  #profile {
-    text-align: center;
-  }
-
-  #profile h2,
-  #profile dl {
-    text-align: left;
-  }
+    /* コンテンツ */
+    .contents {
+        padding: 20px;
+    }
+    /*メニュー*/
+    .menu {
+        display: block;
+        width: 100%;
+        margin: 0 auto 10px;
+    }
+    .menu li {
+        width: 60%;
+        margin: 0 auto 10px;
+    }
+    .section-even,
+    .section-odd,
+    .section-profile {
+        display: block;
+    }
+    #cats img {
+        width: 100%;
+        height: auto;
+    }
+    figcaption {
+        display: none;
+    }
+    .section-even p,
+    .section-odd p {
+        width: 100%;
+    }
+    .section-odd+.more {
+        margin-bottom: 1rem;
+    }
+    #profile {
+        text-align: center;
+    }
+    #profile h2,
+    #profile dl {
+        text-align: left;
+    }
 }
 
 @media screen and (max-width: 400px) {
-
-  /*タイトル*/
-  h1 {
-    width: 200px;
-    font-size: 200%;
-  }
+    /*タイトル*/
+    h1 {
+        width: 200px;
+        font-size: 200%;
+    }
 }
