--- a/css/prettify.css
+++ b/css/prettify.css
@@ -19,7 +19,7 @@ pre .atv, code .atv { color: #e6db74; } /* html/xml attribute value */
 pre .dec, code .dec { color: #ae81ff; } /* decimal */
 
 pre.prettyprint, code.prettyprint {
-	background-color: #272822;
+	background-color: #1b2426;
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
 	-o-border-radius: 8px;
@@ -27,19 +27,34 @@ pre.prettyprint, code.prettyprint {
 	-khtml-border-radius: 8px;
 	border-radius: 8px;
 	font-family: consolas, menlo, courier, monospace;
+	overflow: auto;
+	resize: horizontal;
 }
 
 pre.prettyprint {
-	width: 100%;
-	margin: 1em auto;
-	padding: 1em;
+	width: 80%;
+	margin: 1em 2em 0;
 	white-space: pre-wrap;
+	border: 1px solid #424849;
 }
 
-pre.prettyprinted {
+pre.prettyprint li{
+	font-size: 12px;
+	line-height: 1.4;
+	margin: 0;
+	padding-left: 1rem;
+	background-color: #1b2426;
+	list-style: decimal outside; 
+}
+
+li.L0, li.L1, li.L2, li.L3, li.L4, li.L5, li.L6, li.L7, li.L8, li.L9{
+	border-left:1px solid#75715e;
+}
+
+/* pre.prettyprinted {
 	box-shadow:inset 0 0 1px 2px #3c3d39, 0 0 15px rgba(0,0,0,0.5);
 	border:1px solid #0b0c0a;
-}
+} */
 
 
 /* ------------------------
