--- a/css/main.css
+++ b/css/main.css
@@ -99,9 +99,10 @@ main
 
 code{
 	font-family: monospace;
-	background-color: rgba(0,0,0,0.2);
+	margin: 0 5px 0;
 	border: 1px solid #424849;
 	border-radius: 5px;
+	background-color: #1b2426;
 }
 
 /* リンク色 */
