--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@
 		align-items: center;
 		justify-content: center;
 	}
+
+	img{
+		width: 80%;
+	}
 }
 
 header{
@@ -104,7 +108,6 @@ code{
 	border-radius: 5px;
 	background-color: #1b2426;
 }
-
 /* リンク色 */
 
 a:link {
