--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ main
 }
 
 .note{
+	color: #fff;
 	width: fit-content;
 	padding: 5px;
 	background-color: rgba(255, 255, 255, 0.2);
@@ -110,6 +111,7 @@ main
 code{
 	font-family: consolas, monospace;
 	font-size: 80%;
+	color: #fff;
 	margin: 0 5px 0;
 	border: 1px solid #424849;
 	border-radius: 5px;
