--- a/css/prettify.css
+++ b/css/prettify.css
@@ -54,7 +54,7 @@ pre.prettyprint li{
 	line-height: 1.4;
 	margin: 0;
 	padding-left: 1rem;
-	background-color: #1b2426;
+	background-color: #2d2a2e;
 	list-style: decimal outside; 
 }
 
