--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ code{
 	border: 1px solid #424849;
 	padding: 1px 2px;
 	border-radius: 5px;
-	background-color: #1b2426;
+	background-color: #272822;
 }
 
 .cred{	
