--- a/css/prettify.css
+++ b/css/prettify.css
@@ -1,8 +1,5 @@
 /* ========================
-//#google-prettify-monokai-theme
-//#Version: 0.3
-//#Author: RaphaelDDL
-//#Github: https://github.com/RaphaelDDL/google-prettify-monokai-theme/
+//#google-prettify-monokai-theme-modified
 //For use with Google Code Prettify, HTML Syntax only
 //======================== */
 
@@ -62,12 +59,6 @@ li.L0, li.L1, li.L2, li.L3, li.L4, li.L5, li.L6, li.L7, li.L8, li.L9{
 	border-left:1px solid#75715e;
 }
 
-/* pre.prettyprinted {
-	box-shadow:inset 0 0 1px 2px #3c3d39, 0 0 15px rgba(0,0,0,0.5);
-	border:1px solid #0b0c0a;
-} */
-
-
 /* ------------------------
 //Section: class 'linenums' for line numbering
 //------------------------ */
@@ -80,7 +71,7 @@ ol.linenums {
 
 
 /* =============================================
-//Section: Print Styles (partially from Sunburn Theme)
+//Section: Print Styles (GitHub)
 //================================================ */
 @media print {
 	pre.prettyprinted, pre.prettyprint, code.prettyprint {
@@ -97,14 +88,20 @@ ol.linenums {
 		background-color: #fff;
 	}
 
-	pre .str, code .str { color: #060; }
-	pre .kwd, code .kwd { color: #006; font-weight: bold; }
-	pre .com, code .com { color: #600; font-style: italic; }
-	pre .typ, code .typ { color: #404; font-weight: bold; }
-	pre .lit, code .lit { color: #044; }
-	pre .pun, code .pun { color: #440; }
-	pre .pln, code .pln { color: #000; }
-	pre .tag, code .tag { color: #006; font-weight: bold; }
-	pre .atn, code .atn { color: #404; }
-	pre .atv, code .atv { color: #060; }
+  .str { color: #d14; }  /* string content */
+  .kwd { color: #333; font-weight: bold; }  /* keyword */
+  .com { color: #998; font-style: italic; }  /* comment */
+  .typ { color: #458; font-weight: bold; }  /* type name */
+  .lit { color: #458; }  /* literal value */
+  .pun { color: #333; }  /* punctuation */
+  .pln { color: #000; }  /* plaintext */
+  .opn { color: #333; }  /* lisp open bracket */
+  .clo { color: #333; }  /* lisp close bracket */
+  .tag { color: #000080; font-weight: bold; }  /* markup tag name */
+  .atn { color: #008080; }  /* markup attribute name */
+  .atv { color: #d14; }  /* markup attribute value */
+  .dec { color: #333; }	  /* declaration */
+  .var { color: #008080; }  /* variable name */
+  .fun { color: #900; }  /* function name */
+
 }
