--- a/css/prettify.css
+++ b/css/prettify.css
@@ -30,7 +30,7 @@ pre.prettyprint, code.prettyprint {
 
 pre.prettyprint{
 	width: 80%;
-	margin: 1em 2em 0;
+	margin: 1em 2em;
 	white-space: pre-wrap;
 	border: 1px solid #424849;
 }
