--- a/css/top.css
+++ b/css/top.css
@@ -84,7 +84,7 @@ dl {
 	z-index: 9999;
 	width: 100%;
 	height: 100%;
-	background: #00000030;
+	background: var(--color-bg);
 	opacity: 0;
 	transition: opacity 0.5s,transform 0s 0.5s;
 	transform: scale(0);
