--- a/css/top.css
+++ b/css/top.css
@@ -84,7 +84,7 @@ dl {
 	z-index: 9999;
 	width: 100%;
 	height: 100%;
-	background: var(--color-bg);
+	background: #0003;
 	opacity: 0;
 	transition: opacity 0.5s,transform 0s 0.5s;
 	transform: scale(0);
@@ -102,7 +102,7 @@ dl {
 	width: 75%;
 	max-width: 800px;
 	box-sizing: border-box;
-	background: #000000af;
+	background: var(--color-bg);
 	line-height: 1.4em;
 	transition: 0.5s;
 	border-radius: 12px;
