--- a/css/prettify.css
+++ b/css/prettify.css
@@ -5,7 +5,7 @@
 
 pre .str, code .str { color: #e6db5a; } /* string */
 pre .kwd, code .kwd { color: #66d9ef; } /* keyword */
-pre .com, code .com { color: #75715e; font-style: italic; } /* comment */
+pre .com, code .com { color: #c1bfb4ad; font-style: italic; } /* comment */
 pre .typ, code .typ { color: #66d9ef; } /* type */
 pre .lit, code .lit { color: #ae81ff; } /* literal */
 pre .pun, code .pun { color: #fff; } /* punctuation */
