--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,6 @@ body {
 	margin: 0;
 }
 
-
 header {
 	text-align: center;
 	background: #0003;
@@ -86,9 +85,23 @@ main{
 	margin: 8px;
 }
 
+h2, h3, h4 {
+	margin-top: 2em;
+}
+
+h3, h4 {
+	margin-left: 1.5em;
+	margin-bottom: 1em;
+}
+
+main > *:first-child{
+	margin: .75em 0;
+}
+
 .main {
 	text-align: center;
 }
+
 nav {
 	order: -1;
 }
@@ -101,10 +114,6 @@ footer {
 footer p {
 	margin: 0;
 	padding: 0.5em;
-}
-
-h3, h4 {
-	margin: 30px;
 }
 
 li {
@@ -123,8 +132,17 @@ main
 
 .memo{
 	margin-left: 1em;
-	border-left: 1px solid  var(--color-text);;
+	border-left: 1px solid  var(--color-text);
 	padding-left: 1em;
+}
+
+.cf{
+	width: fit-content;
+	margin: 1em 2em;
+	margin-right: 0;
+	padding: 1em 0;
+	border-top: 1px solid  var(--color-text);
+	border-bottom: 1px solid  var(--color-text);
 }
 
 .note{
